@@ -1,3 +1,12 @@
+2023-06-19 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/hc08/gen.c,
+	  src/hc08/gen.h,
+	  src/hc08/main.c,
+	  src/hc08/ralloc.c,
+	  src/hc08/ralloc2.cc:
+	  Use information from generalized constant propagation analysis in hc08 code generation, remove support for old register allocator.
+
 2023-06-18 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc,
